# Chat

./: .gitignore  .gitmodules  CMakeLists.txt  Chat.pro
app/: build.gradle
app/src/androidTest/java/top/yellowsea/chat/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/top/yellowsea/chat/: CommunicationActivity.java
app/src/main/java/top/yellowsea/chat/transmission/: Client.java  ClientHandler.java  ClientTest.java  ECDH.java  InformationPackage.java  Server.java  Test.java  User.java
app/src/main/res/layout/: activity_communication.xml  content_communication.xml
app/src/main/res/menu/: menu_communication.xml
app/src/test/java/top/yellowsea/chat/: ExampleUnitTest.java
include/: communication.h  package.h  user.h
src/: communication.cpp  main.cpp  package.cpp  user.cpp
src/ui/: mainwindow.cpp  mainwindow.h
